--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.3.0"
 authors = ["Katharina Fey <kookie@spacekookie.de>"]
 description = "Boilerplate-free configuration management"
 license = "MIT/X11 OR Apache-2"
-documentation = "docs.rs/confy"
+documentation = "https://docs.rs/confy"
 repository = "https://github.com/rust-clique/confy"
 
 [dependencies]
