--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ serde = "1.0"
 toml = "0.4"
 directories = "0.10.0"
 serde_derive = { version = "1.0", optional = true }
-failure = "*"
+failure = "0.1"
 
 [features]
 sd = ["serde_derive"]
