--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,17 @@ repository = "https://github.com/rust-clique/confy"
 
 [dependencies]
 serde = "1.0"
-toml = "0.4"
+toml = { version = "0.4", optional = true }
 directories = "0.10"
 serde_derive = { version = "1.0", optional = true }
 failure = "0.1"
+serde_yaml = { version = "0.8", optional = true }
 
 [features]
+default = ["toml_conf"]
 sd = ["serde_derive"]
+toml_conf = ["toml"]
+yaml_conf = ["serde_yaml"]
 
 [[example]]
 name = "simple"
