--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,12 @@ documentation = "https://docs.rs/confy"
 repository = "https://github.com/rust-clique/confy"
 
 [dependencies]
-serde = "1.0"
-toml = "0.4"
-directories = "0.10"
-serde_derive = { version = "1.0", optional = true }
-
-[features]
-sd = ["serde_derive"]
+serde = "^1.0"
+toml = "^0.5"
+directories = "^2.0"
 
 [[example]]
 name = "simple"
-required-features = ["sd"]
+
+[dev-dependencies]
+serde_derive = "^1.0"
