--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "Boilerplate-free configuration management"
 license = "MIT/X11 OR Apache-2.0"
 documentation = "https://docs.rs/confy"
 repository = "https://github.com/rust-clique/confy"
+edition = "2018"
 
 [dependencies]
 serde = "^1.0"
