Add optional compilation option for using YAML instead of TOML (#17)
* Added optional compilation option for using YAML instead of TOML

* I have fallen for one of the classic blunders

I am a complete gibbon.  An absolute walnut.  A total clown.

* Added note about YAML to the README

* Changed YAML extension from .yaml to the apparently more common .yml

* Fixed missing code block fence in README

* Added compile error if when attempting to compile with both yaml and toml support

* Re-remove unused depends

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,14 @@ edition = "2018"
 
 [dependencies]
 serde = "^1.0"
-toml = "^0.5"
+toml = { version = "^0.5", optional = true }
 directories = "^2.0"
+serde_yaml = { version = "0.8", optional = true }
+
+[features]
+default = ["toml_conf"]
+toml_conf = ["toml"]
+yaml_conf = ["serde_yaml"]
 
 [[example]]
 name = "simple"
