--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,10 @@ repository = "https://github.com/rust-clique/confy"
 edition = "2018"
 
 [dependencies]
+directories-next = "^2.0"
 serde = "^1.0"
-toml = { version = "^0.5", optional = true }
-directories = "^2.0"
 serde_yaml = { version = "0.8", optional = true }
+toml = { version = "^0.5", optional = true }
 
 [features]
 default = ["toml_conf"]
