--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2018"
 directories-next = "^2.0"
 serde = "^1.0"
 serde_yaml = { version = "0.8", optional = true }
+thiserror = "1.0"
 toml = { version = "^0.5", optional = true }
 
 [features]
