Revert "Update dependencies fix #38"
This reverts commit 0f192cba73f04754fd3145ab8e9ec932205a56ea.
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/rust-cli/confy"
 edition = "2018"
 
 [dependencies]
-directories-next = "^2.0"
+directories = "^2.0"
 serde = "^1.0"
 serde_yaml = { version = "0.8", optional = true }
 thiserror = "1.0"
