--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,11 @@ license = "MIT/X11 OR Apache-2.0"
 documentation = "https://docs.rs/confy"
 repository = "https://github.com/rust-cli/confy"
 readme = "README.md"
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 directories = "^2.0"
+ron = { version = "0.8.0", optional = true }
 serde = "^1.0"
 serde_yaml = { version = "0.8", optional = true }
 thiserror = "1.0"
@@ -20,6 +21,7 @@ toml = { version = "^0.5", optional = true }
 default = ["toml_conf"]
 toml_conf = ["toml"]
 yaml_conf = ["serde_yaml"]
+ron_conf = ["ron"]
 
 [[example]]
 name = "simple"
