--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ edition = "2021"
 
 [dependencies]
 ron = { version = "0.8.0", optional = true }
-directories = "4.0"
+directories = "5"
 serde = "^1.0"
-serde_yaml = { version = "0.8", optional = true }
+serde_yaml = { version = "0.9", optional = true }
 thiserror = "1.0"
-toml = { version = "^0.5", optional = true }
+toml = { version = "0.8", optional = true }
 
 [features]
 default = ["toml_conf"]
