--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,14 +13,14 @@ edition = "2021"
 ron = { version = "0.8.0", optional = true }
 directories = "5"
 serde = "^1.0"
-serde_yaml = { version = "0.9", optional = true }
+serde_yml = { version = "0.0.10", optional = true }
 thiserror = "1.0"
 toml = { version = "0.8", optional = true }
 
 [features]
 default = ["toml_conf"]
 toml_conf = ["toml"]
-yaml_conf = ["serde_yaml"]
+yaml_conf = ["serde_yml"]
 ron_conf = ["ron"]
 
 [[example]]
