Fix Audit Cache (#111)
* add the crates files in order for the cache to know when the audit tool is installed

* better name the audit cache

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -28,8 +28,10 @@ jobs:
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
+            ~/.cargo/.crates.toml
+            ~/.cargo/.crates2.json
             target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-audit
 
       - name: Install Cargo Audit
         run: cargo install cargo-audit --locked
