--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ ron = { version = "0.10.1", optional = true }
 directories = "6"
 serde = "^1.0"
 serde_yaml = { version = "0.9", optional = true }
+serde_json = { version = "1.0", optional = true }
 thiserror = "2.0"
 basic-toml = { version = "0.1.10", optional = true }
 toml = { version = "0.8", optional = true }
@@ -24,6 +25,7 @@ toml_conf = ["toml"]
 basic_toml_conf = ["basic-toml"]
 yaml_conf = ["serde_yaml"]
 ron_conf = ["ron"]
+json_conf = ["serde_json"]
 
 [[example]]
 name = "simple"
