--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde_yaml = { version = "0.9", optional = true }
 thiserror = "2.0"
 basic-toml = { version = "0.1.10", optional = true }
 toml = { version = "0.9", optional = true }
+lazy_static = "1.5"
 
 [features]
 default = ["toml_conf"]
